@@ -5,10 +5,11 @@ zeit.cms.declare_namespace('zeit.content.article');
 zeit.content.article.normalize_filename = function(filename) {
     var result = filename;
     result = result.trim().toLowerCase();
-    result = result.replace('ä', 'ae');
-    result = result.replace('ö', 'oe');
-    result = result.replace('ü', 'ue');
-    result = result.replace('ß', 'ss');
+    result = result.replace(/ä/g, 'ae');
+    result = result.replace(/ö/g, 'oe');
+    result = result.replace(/ü/g, 'ue');
+    result = result.replace(/ß/g, 'ss');
+    result = result.replace(/(.*?)([^a-z0-9]+)$/, '$1');
     result = result.replace(/[^a-z0-9]/g, '-');
     result = result.replace(/-+/g, '-');
     return result;
